@@ -100,6 +100,11 @@
     <span class="org">Opera Software ASA</span>, 
     <span class="email">ed@opera.com</span>
   </dd>
+  <dd class="vcard">
+    <span class="fn">Dirk Schulze</span>,
+    <span class="org">Adobe Systems</span>, 
+    <span class="email">dschulze@adobe.com</span>
+  </dd>
   <dt>Authors:</dt>
   <dd>
     The authors of this specification are the participants
@@ -553,6 +558,10 @@
   and opacity. These effects all apply after any other CSS effects such as
   'border'. As per SVG, the application of 'filter' has no
   effect on hit-testing.
+</p>
+
+<p class="issue">
+  The CSS WG wants to look into how to apply the filter to certain parts of an object (background, border) instead of just the whole group with descendants.
 </p>
 
 <h2 id="filter-margin-property">
