@@ -422,3 +422,5 @@ table.values-desc td:first-child {
     min-width: 28ex;
 }
 
+ul.toc { text-transform: uppercase; }
+
