@@ -204,7 +204,7 @@ div.example {
 div.example:before { color: #B9AB2D; }
 
 /* ToC not indented, but font style shows hierarchy */
-ul.toc {margin: 1em 0; padding: 0; line-height: 1.3; font-weight: bold; text-transform: uppercase; }
+ul.toc {margin: 1em 0; padding: 0; line-height: 1.3; font-weight: bold; /*text-transform: uppercase;*/ }
 ul.toc ul {margin: 0; padding: 0; font-weight: normal; text-transform: none; }
 ul.toc ul ul {margin: 0 0 0 2em; font-style: italic; }
 ul.toc ul ul ul {margin: 0}
