@@ -1,6 +1,10 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
+2012-08-16  Dirk Schulze  <dschulze@adobe.com>
+- Added issue to apply filters to just borders or backgrounds instead of just the whole group.
+- Added me as editor.
+
 2012-08-12  Dirk Schulze  <dschulze@adobe.com>
 - Fix references to Compositing spec.
 
